--- a/en/chinese-portrait.html
+++ b/en/chinese-portrait.html
@@ -5,20 +5,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" lang="en" content="Yohan Guyot">
-    <meta name="description" content="Yohan Guyot's portfolio, UX/UI designer. Discover my chinese portrait !">
+    <meta name="description" content="Yohan Guyot's portfolio, polyvalent designer. Discover my chinese portrait !">
     <meta name="robots" content="noindex">
 
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://yohanguyot.fr/en/chinese-portrait.html">
     <meta property="og:title" content="YOHAN GUYOT | CHINESE PORTRAIT">
-    <meta property="og:description" content="Yohan Guyot's portfolio, UX/UI designer. Discover my chinese portrait !">
+    <meta property="og:description"
+        content="Yohan Guyot's portfolio, polyvalent designer. Discover my chinese portrait !">
     <meta property="og:image" content="https://www.yohanguyot.fr/assets/img/portrait-chinois/card.jpg">
 
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://yohanguyot.fr/en/chinese-portrait.html">
     <meta property="twitter:title" content="YOHAN GUYOT | CHINESE PORTRAIT">
     <meta property="twitter:description"
-        content="Yohan Guyot's portfolio, UX/UI designer. Discover my chinese portrait !">
+        content="Yohan Guyot's portfolio, polyvalent designer. Discover my chinese portrait !">
     <meta property="og:image" content="https://www.yohanguyot.fr/assets/img/portrait-chinois/card.jpg">
 
     <title>YOHAN GUYOT | CHINESE PORTRAIT</title>
