--- a/en/index.html
+++ b/en/index.html
@@ -5,19 +5,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" lang="en" content="Yohan Guyot">
-    <meta name="description" content="Yohan Guyot's portfolio, UX/UI designer. Discover my projects !">
+    <meta name="description" content="Yohan Guyot's portfolio, polyvalent designer. Discover my projects !">
     <meta name="robots" content="noindex">
 
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://yohanguyot.fr/en/index.html">
     <meta property="og:title" content="YOHAN GUYOT | PORTFOLIO">
-    <meta property="og:description" content="Yohan Guyot's portfolio, UX/UI designer. Discover my projects !">
+    <meta property="og:description" content="Yohan Guyot's portfolio, polyvalent designer. Discover my projects !">
     <meta property="og:image" content="https://www.yohanguyot.fr/assets/img/card.jpg">
 
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://yohanguyot.fr/en/index.html">
     <meta property="twitter:title" content="YOHAN GUYOT | PORTFOLIO">
-    <meta property="twitter:description" content="Yohan Guyot's portfolio, UX/UI designer. Discover my projects !">
+    <meta property="twitter:description" content="Yohan Guyot's portfolio, polyvalent designer. Discover my projects !">
     <meta property="twitter:image" content="https://www.yohanguyot.fr/assets/img/card.jpg">
 
     <title>YOHAN GUYOT | PORTFOLIO</title>
@@ -78,7 +78,7 @@
             <div class="title">
                 <h1 class="title-filled noise">PORTFOLIO</h1>
                 <h1 class="title-outline">PORTFOLIO</h1>
-                <div id="job">UX/UI DESIGNER</div>
+                <div id="job">POLYVALENT DESIGNER</div>
             </div>
             <div id="planet">
                 <img src="../assets/img/planet.png" alt="" draggable="false" onContextMenu="return false;">
