--- a/en/netflix-redesign.html
+++ b/en/netflix-redesign.html
@@ -6,21 +6,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" lang="en" content="Yohan Guyot">
     <meta name="description"
-        content="Yohan Guyot's portfolio, UX/UI designer. Discover my redesign of the Netflix application !">
+        content="Yohan Guyot's portfolio, polyvalent designer. Discover my redesign of the Netflix application !">
     <meta name="robots" content="noindex">
 
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://yohanguyot.fr/en/netflixredesign.html">
     <meta property="og:title" content="YOHAN GUYOT | NETFLIX REDESIGN">
     <meta property="og:description"
-        content="Yohan Guyot's portfolio, UX/UI designer. Discover my redesign of the Netflix application ! !">
+        content="Yohan Guyot's portfolio, polyvalent designer. Discover my redesign of the Netflix application ! !">
     <meta property="og:image" content="https://www.yohanguyot.fr/assets/img/redesign-netflix/card.jpg">
 
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://yohanguyot.fr/en/netflix-redesign.html">
     <meta property="twitter:title" content="YOHAN GUYOT | NETFLIX REDESIGN">
     <meta property="twitter:description"
-        content="Yohan Guyot's portfolio, UX/UI designer. Discover my redesign of the Netflix application ! !">
+        content="Yohan Guyot's portfolio, polyvalent designer. Discover my redesign of the Netflix application ! !">
     <meta property="og:image" content="https://www.yohanguyot.fr/assets/img/redesign-netflix/card.jpg">
 
     <title>YOHAN GUYOT | NETFLIX REDESIGN</title>
