--- a/en/open-house-2020.html
+++ b/en/open-house-2020.html
@@ -5,22 +5,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" lang="en" content="Yohan Guyot">
-    <meta name="description" content="Yohan Guyot's portfolio, UX/UI designer. Discover my poster for the 2020 open house of the University
+    <meta name="description" content="Yohan Guyot's portfolio, polyvalent designer. Discover my poster for the 2020 open house of the University
         of Champs-sur-Marne !">
     <meta name="robots" content="noindex">
 
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://yohanguyot.fr/en/open-house-2020.html">
     <meta property="og:title" content="YOHAN GUYOT | OPEN HOUSE 2020">
-    <meta property="og:description"
-        content="Yohan Guyot's portfolio, UX/UI designer. Discover my poster for the 2020 open house of the University of Champs-sur-Marne !">
+    <meta property="og:description" content="Yohan Guyot's portfolio, polyvalent designer. Discover my poster for the 2020 open house of the
+        University of Champs-sur-Marne !">
     <meta property="og:image" content="https://www.yohanguyot.fr/assets/img/jpo-2020/card.jpg">
 
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://yohanguyot.fr/en/open-house-2020.html">
     <meta property="twitter:title" content="YOHAN GUYOT | OPEN HOUSE 2020">
-    <meta property="twitter:description"
-        content="Yohan Guyot's portfolio, UX/UI designer. Discover my poster for the 2020 open house of the University of Champs-sur-Marne !">
+    <meta property="twitter:description" content="Yohan Guyot's portfolio, polyvalent designer. Discover my poster for the 2020 open house of the
+        University of Champs-sur-Marne !">
     <meta property="og:image" content="https://www.yohanguyot.fr/assets/img/jpo-2020/card.jpg">
 
     <title>YOHAN GUYOT | OPEN HOUSE 2020</title>
