--- a/en/slyde.html
+++ b/en/slyde.html
@@ -6,21 +6,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" lang="en" content="Yohan Guyot">
     <meta name="description"
-        content="Yohan Guyot's portfolio, UX/UI designer. Discover Slyde, the music collaboration platform !">
+        content="Yohan Guyot's portfolio, polyvalent designer. Discover Slyde, the music collaboration platform !">
     <meta name="robots" content="noindex">
 
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://yohanguyot.fr/en/slyde.html">
     <meta property="og:title" content="YOHAN GUYOT | SLYDE">
     <meta property="og:description"
-        content="Yohan Guyot's portfolio, UX/UI designer. Discover Slyde, the music collaboration platform !">
+        content="Yohan Guyot's portfolio, polyvalent designer. Discover Slyde, the music collaboration platform !">
     <meta property="og:image" content="https://www.yohanguyot.fr/assets/img/slyde/card.jpg">
 
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://yohanguyot.fr/en/slyde.html">
     <meta property="twitter:title" content="YOHAN GUYOT | SLYDE">
     <meta property="twitter:description"
-        content="Yohan Guyot's portfolio, UX/UI designer. Discover Slyde, the music collaboration platform !">
+        content="Yohan Guyot's portfolio, polyvalent designer. Discover Slyde, the music collaboration platform !">
     <meta property="og:image" content="https://www.yohanguyot.fr/assets/img/slyde/card.jpg">
 
     <title>YOHAN GUYOT | SLYDE</title>
@@ -164,8 +164,22 @@
         </div>
 
         <div class="project-gallery">
-            <div class="coming-soon noise" data-aos="zoom-out" data-aos-duration="1500"
-                data-aos-anchor-placement="top-bottom" data-aos-once="true">COMING SOON</div>
+            <img src="../assets/img/slyde/accueil.jpg" alt="" draggable="false" class="slyde" data-aos="fade-up"
+                data-aos-duration="1500" data-aos-anchor-placement="top-bottom" data-aos-once="true">
+            <img src="../assets/img/slyde/feed.jpg" alt="" draggable="false" class="slyde slyde-mid" data-aos="zoom-out"
+                data-aos-duration="1500" data-aos-anchor-placement="top-bottom" data-aos-once="true">
+            <img src="../assets/img/slyde/profil.jpg" alt="" draggable="false" class="slyde" data-aos="zoom-out"
+                data-aos-duration="1500" data-aos-anchor-placement="top-bottom" data-aos-once="true">
+            <img src="../assets/img/slyde/projet.jpg" alt="" draggable="false" class="slyde slyde-mid"
+                data-aos="zoom-out" data-aos-duration="1500" data-aos-anchor-placement="top-bottom"
+                data-aos-once="true">
+            <img src="../assets/img/slyde/tchat.jpg" alt="" draggable="false" class="slyde" data-aos="zoom-out"
+                data-aos-duration="1500" data-aos-anchor-placement="top-bottom" data-aos-once="true">
+            <img src="../assets/img/slyde/ins-3.jpg" alt="" draggable="false" class="slyde slyde-mid"
+                data-aos="zoom-out" data-aos-duration="1500" data-aos-anchor-placement="top-bottom"
+                data-aos-once="true">
+            <img src="../assets/img/slyde/ins-4.jpg" alt="" draggable="false" class="slyde" data-aos="zoom-out"
+                data-aos-duration="1500" data-aos-anchor-placement="top-bottom" data-aos-once="true">
         </div>
 
         <div class="credits" data-aos="fade-right" data-aos-duration="1500" data-aos-anchor-placement="top-bottom"
