--- a/mauvaise-rencontre.html
+++ b/mauvaise-rencontre.html
@@ -5,21 +5,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" lang="fr" content="Yohan Guyot">
-    <meta name="description"
-        content="Portfolio de Yohan Guyot, UX/UI designer. Découvrez mon premier motion design : Mauvaise rencontre !">
+    <meta name="description" content="Portfolio de Yohan Guyot, designer polyvalent. Découvrez mon premier motion design : Mauvaise rencontre
+        !">
 
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://yohanguyot.fr/mauvaise-rencontre.html">
     <meta property="og:title" content="YOHAN GUYOT | MAUVAISE RENCONTRE">
-    <meta property="og:description"
-        content="Portfolio de Yohan Guyot, UX/UI designer. Découvrez mon premier motion design : Mauvaise rencontre !">
+    <meta property="og:description" content="Portfolio de Yohan Guyot, designer polyvalent. Découvrez mon premier motion design : Mauvaise rencontre
+        !">
     <meta property="og:image" content="https://www.yohanguyot.fr/assets/img/mauvaise-rencontre/card.jpg">
 
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://yohanguyot.fr/mauvaise-rencontre.html">
     <meta property="twitter:title" content="YOHAN GUYOT | MAUVAISE RENCONTRE>
-    <meta property=" twitter:description"
-        content="Portfolio de Yohan Guyot, UX/UI designer. Découvrez mon premier motion design : Mauvaise rencontre !">
+    <meta property=" twitter:description" content="Portfolio de Yohan Guyot, designer polyvalent. Découvrez mon premier motion design : Mauvaise rencontre
+        !">
     <meta property="og:image" content="https://www.yohanguyot.fr/assets/img/mauvaise-rencontre/card.jpg">
 
     <title>YOHAN GUYOT | MAUVAISE RENCONTRE</title>
