--- a/mmi-town.html
+++ b/mmi-town.html
@@ -5,18 +5,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" lang="fr" content="Yohan Guyot">
-    <meta name="description" content="Portfolio de Yohan Guyot, UX/UI designer. Découvrez MMI Town !">
+    <meta name="description" content="Portfolio de Yohan Guyot, designer polyvalent. Découvrez MMI Town !">
 
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://yohanguyot.fr/mmi-town.html">
     <meta property="og:title" content="YOHAN GUYOT | MMI TOWN">
-    <meta property="og:description" content="Portfolio de Yohan Guyot, UX/UI designer. Découvrez MMI Town !">
+    <meta property="og:description" content="Portfolio de Yohan Guyot, designer polyvalent. Découvrez MMI Town !">
     <meta property="og:image" content="https://www.yohanguyot.fr/assets/img/mmi-town/card.jpg">
 
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://yohanguyot.fr/mmi-town.html">
     <meta property="twitter:title" content="YOHAN GUYOT | MMI TOWN">
-    <meta property="twitter:description" content="Portfolio de Yohan Guyot, UX/UI designer. Découvrez MMI Town !">
+    <meta property="twitter:description" content="Portfolio de Yohan Guyot, designer polyvalent. Découvrez MMI Town !">
     <meta property="og:image" content="https://www.yohanguyot.fr/assets/img/mmi-town/card.jpg">
 
     <title>YOHAN GUYOT | MMI TOWN</title>
