--- a/redesign-netflix.html
+++ b/redesign-netflix.html
@@ -6,20 +6,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" lang="fr" content="Yohan Guyot">
     <meta name="description"
-        content="Portfolio de Yohan Guyot, UX/UI designer. Découvrez mon redesign de l'application Netflix !">
+        content="Portfolio de Yohan Guyot, designer polyvalent. Découvrez mon redesign de l'application Netflix !">
 
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://yohanguyot.fr/redesign-netflix.html">
     <meta property="og:title" content="YOHAN GUYOT | REDESIGN NETFLIX">
     <meta property="og:description"
-        content="Portfolio de Yohan Guyot, UX/UI designer. Découvrez mon redesign de l'application Netflix !">
+        content="Portfolio de Yohan Guyot, designer polyvalent. Découvrez mon redesign de l'application Netflix !">
     <meta property="og:image" content="https://www.yohanguyot.fr/assets/img/redesign-netflix/card.jpg">
 
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://yohanguyot.fr/redesign-netflix.html">
     <meta property="twitter:title" content="YOHAN GUYOT | REDESIGN NETFLIX">
     <meta property="twitter:description"
-        content="Portfolio de Yohan Guyot, UX/UI designer. Découvrez mon redesign de l'application Netflix !">
+        content="Portfolio de Yohan Guyot, designer polyvalent. Découvrez mon redesign de l'application Netflix !">
     <meta property="og:image" content="https://www.yohanguyot.fr/assets/img/redesign-netflix/card.jpg">
 
     <title>YOHAN GUYOT | REDESIGN NETFLIX</title>
