--- a/a-propos.html
+++ b/a-propos.html
@@ -5,18 +5,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" lang="fr" content="Yohan Guyot">
-    <meta name="description" content="Portfolio de Yohan Guyot, UX/UI designer. Découvrez mon profil !">
+    <meta name="description" content="Portfolio de Yohan Guyot, designer polyvalent. Découvrez mon profil !">
 
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://yohanguyot.fr/a-propos.html">
     <meta property="og:title" content="YOHAN GUYOT | À PROPOS">
-    <meta property="og:description" content="Portfolio de Yohan Guyot, UX/UI designer. Découvrez mon profil !">
+    <meta property="og:description" content="Portfolio de Yohan Guyot, designer polyvalent. Découvrez mon profil !">
     <meta property="og:image" content="https://www.yohanguyot.fr/assets/img/a-propos/card.jpg">
 
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://yohanguyot.fr/a-propos.html">
     <meta property="twitter:title" content="YOHAN GUYOT | À PROPOS">
-    <meta property="twitter:description" content="Portfolio de Yohan Guyot, UX/UI designer. Découvrez mon profil !">
+    <meta property="twitter:description"
+        content="Portfolio de Yohan Guyot, designer polyvalent. Découvrez mon profil !">
     <meta property="og:image" content="https://www.yohanguyot.fr/assets/img/a-propos/card.jpg">
 
     <title>YOHAN GUYOT | À PROPOS</title>
