--- a/cv-numerique.html
+++ b/cv-numerique.html
@@ -5,19 +5,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" lang="fr" content="Yohan Guyot">
-    <meta name="description" content="Portfolio de Yohan Guyot, UX/UI designer. Découvrez mon CV numérique !">
+    <meta name="description" content="Portfolio de Yohan Guyot, designer polyvalent. Découvrez mon CV numérique !">
 
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://yohanguyot.fr/cv-numerique.html">
     <meta property="og:title" content="YOHAN GUYOT | CV NUMÉRIQUE">
-    <meta property="og:description" content="Portfolio de Yohan Guyot, UX/UI designer. Découvrez mon CV numérique !">
+    <meta property="og:description"
+        content="Portfolio de Yohan Guyot, designer polyvalent. Découvrez mon CV numérique !">
     <meta property="og:image" content="https://www.yohanguyot.fr/assets/img/cv-numerique/card.jpg">
 
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://yohanguyot.fr/cv-numerique.html">
     <meta property="twitter:title" content="YOHAN GUYOT | CV NUMÉRIQUE">
     <meta property="twitter:description"
-        content="Portfolio de Yohan Guyot, UX/UI designer. Découvrez mon CV numérique !">
+        content="Portfolio de Yohan Guyot, designer polyvalent. Découvrez mon CV numérique !">
     <meta property="og:image" content="https://www.yohanguyot.fr/assets/img/cv-numerique/card.jpg">
 
     <title>YOHAN GUYOT | CV NUMÉRIQUE</title>
