--- a/en/bad-encounter.html
+++ b/en/bad-encounter.html
@@ -6,21 +6,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" lang="en" content="Yohan Guyot">
     <meta name="description"
-        content="Yohan Guyot's portfolio, UX/UI designer. Discover my first motion design : Bad encounter !">
+        content="Yohan Guyot's portfolio, polyvalent designer. Discover my first motion design : Bad encounter !">
     <meta name="robots" content="noindex">
 
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://yohanguyot.fr/en/bad-encounter.html">
     <meta property="og:title" content="YOHAN GUYOT | BAD ENCOUNTER">
     <meta property="og:description"
-        content="Yohan Guyot's portfolio, UX/UI designer. Discover my first motion design : Bad encounter !">
+        content="Yohan Guyot's portfolio, polyvalent designer. Discover my first motion design : Bad encounter !">
     <meta property="og:image" content="https://www.yohanguyot.fr/assets/img/mauvaise-rencontre/card.jpg">
 
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://yohanguyot.fr/en/bad-encounter.html">
     <meta property="twitter:title" content="YOHAN GUYOT | BAD ENCOUNTER>
     <meta property=" twitter:description"
-        content="Yohan Guyot's portfolio, UX/UI designer. Discover my first motion design : Bad encounter !">
+        content="Yohan Guyot's portfolio, polyvalent designer. Discover my first motion design : Bad encounter !">
     <meta property="og:image" content="https://www.yohanguyot.fr/assets/img/mauvaise-rencontre/card.jpg">
 
     <title>YOHAN GUYOT | BAD ENCOUNTER</title>
