--- a/en/mmi-town.html
+++ b/en/mmi-town.html
@@ -5,19 +5,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" lang="en" content="Yohan Guyot">
-    <meta name="description" content="Yohan Guyot's portfolio, UX/UI designer. Discover MMI Town !">
+    <meta name="description" content="Yohan Guyot's portfolio, polyvalent designer. Discover MMI Town !">
     <meta name="robots" content="noindex">
 
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://yohanguyot.fr/en/mmi-town.html">
     <meta property="og:title" content="YOHAN GUYOT | MMI TOWN">
-    <meta property="og:description" content="Yohan Guyot's portfolio, UX/UI designer. Discover MMI Town !">
+    <meta property="og:description" content="Yohan Guyot's portfolio, polyvalent designer. Discover MMI Town !">
     <meta property="og:image" content="https://www.yohanguyot.fr/assets/img/mmi-town/card.jpg">
 
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://yohanguyot.fr/en/mmi-town.html">
     <meta property="twitter:title" content="YOHAN GUYOT | MMI TOWN">
-    <meta property="twitter:description" content="Yohan Guyot's portfolio, UX/UI designer. Discover MMI Town !">
+    <meta property="twitter:description" content="Yohan Guyot's portfolio, polyvalent designer. Discover MMI Town !">
     <meta property="og:image" content="https://www.yohanguyot.fr/assets/img/mmi-town/card.jpg">
 
     <title>YOHAN GUYOT | MMI TOWN</title>
