--- a/en/video-cv-editing.html
+++ b/en/video-cv-editing.html
@@ -5,20 +5,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" lang="en" content="Yohan Guyot">
-    <meta name="description" content="Yohan Guyot's portfolio, UX/UI designer. Discover my video cv editing !">
+    <meta name="description" content="Yohan Guyot's portfolio, polyvalent designer. Discover my video cv editing !">
     <meta name="robots" content="noindex">
 
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://yohanguyot.fr/en/video-cv-editing.html">
     <meta property="og:title" content="YOHAN GUYOT | VIDEO CV EDITING">
-    <meta property="og:description" content="Yohan Guyot's portfolio, UX/UI designer. Discover my video cv editing !">
+    <meta property="og:description"
+        content="Yohan Guyot's portfolio, polyvalent designer. Discover my video cv editing !">
     <meta property="og:image" content="https://www.yohanguyot.fr/assets/img/cv-video/card.jpg">
 
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://yohanguyot.fr/en/video-cv-editing.html">
     <meta property="twitter:title" content="YOHAN GUYOT | VIDEO CV EDITING">
     <meta property="twitter:description"
-        content="Yohan Guyot's portfolio, UX/UI designer. Discover my video cv editing !">
+        content="Yohan Guyot's portfolio, polyvalent designer. Discover my video cv editing !">
     <meta property="og:image" content="https://www.yohanguyot.fr/assets/img/cv-video/card.jpg">
 
     <title>YOHAN GUYOT | VIDEO CV EDITING</title>
