--- a/index.html
+++ b/index.html
@@ -5,18 +5,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" lang="fr" content="Yohan Guyot">
-    <meta name="description" content="Portfolio de Yohan Guyot, UX/UI designer. Découvrez mes projets !">
+    <meta name="description" content="Portfolio de Yohan Guyot, designer polyvalent. Découvrez mes projets !">
 
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://yohanguyot.fr/index.html">
     <meta property="og:title" content="YOHAN GUYOT | PORTFOLIO">
-    <meta property="og:description" content="Portfolio de Yohan Guyot, UX/UI designer. Découvrez mes projets !">
+    <meta property="og:description" content="Portfolio de Yohan Guyot, designer polyvalent. Découvrez mes projets !">
     <meta property="og:image" content="https://www.yohanguyot.fr/assets/img/card.jpg">
 
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://yohanguyot.fr/index.html">
     <meta property="twitter:title" content="YOHAN GUYOT | PORTFOLIO">
-    <meta property="twitter:description" content="Portfolio de Yohan Guyot, UX/UI designer. Découvrez mes projets !">
+    <meta property="twitter:description"
+        content="Portfolio de Yohan Guyot, designer polyvalent. Découvrez mes projets !">
     <meta property="twitter:image" content="https://www.yohanguyot.fr/assets/img/card.jpg">
 
     <title>YOHAN GUYOT | PORTFOLIO</title>
@@ -77,7 +78,7 @@
             <div class="title">
                 <h1 class="title-filled noise">PORTFOLIO</h1>
                 <h1 class="title-outline">PORTFOLIO</h1>
-                <div id="job">UX/UI DESIGNER</div>
+                <div id="job">DESIGNER POLYVALENT</div>
             </div>
             <div id="planet">
                 <img src="assets/img/planet.png" alt="" draggable="false" onContextMenu="return false;">
