--- a/jpo-2020.html
+++ b/jpo-2020.html
@@ -5,20 +5,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" lang="fr" content="Yohan Guyot">
-    <meta name="description"
-        content="Portfolio de Yohan Guyot, UX/UI designer. Découvrez mon affiche pour la JPO 2020 de l'IUT de Champs-sur-Marne !">
+    <meta name="description" content="Portfolio de Yohan Guyot, designer polyvalent. Découvrez mon affiche pour la JPO 2020 de l'IUT de
+        Champs-sur-Marne !">
 
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://yohanguyot.fr/jpo-2020.html">
     <meta property="og:title" content="YOHAN GUYOT | JPO 2020">
-    <meta property="og:description" content="Portfolio de Yohan Guyot, UX/UI designer. Découvrez mon affiche pour la JPO 2020 de l'IUT de
+    <meta property="og:description" content="Portfolio de Yohan Guyot, designer polyvalent. Découvrez mon affiche pour la JPO 2020 de l'IUT de
         Champs-sur-Marne !">
     <meta property="og:image" content="https://www.yohanguyot.fr/assets/img/jpo-2020/card.jpg">
 
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://yohanguyot.fr/jpo-2020.html">
     <meta property="twitter:title" content="YOHAN GUYOT | JPO 2020">
-    <meta property="twitter:description" content="Portfolio de Yohan Guyot, UX/UI designer. Découvrez mon affiche pour la JPO 2020 de l'IUT de
+    <meta property="twitter:description" content="Portfolio de Yohan Guyot, designer polyvalent. Découvrez mon affiche pour la JPO 2020 de l'IUT de
         Champs-sur-Marne !">
     <meta property="og:image" content="https://www.yohanguyot.fr/assets/img/jpo-2020/card.jpg">
 
