--- a/montage-cv-video.html
+++ b/montage-cv-video.html
@@ -5,20 +5,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" lang="fr" content="Yohan Guyot">
-    <meta name="description" content="Portfolio de Yohan Guyot, UX/UI designer. Découvrez le montage de mon CV vidéo !">
+    <meta name="description"
+        content="Portfolio de Yohan Guyot, designer polyvalent. Découvrez le montage de mon CV vidéo !">
 
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://yohanguyot.fr/montage-cv-video.html">
     <meta property="og:title" content="YOHAN GUYOT | MONTAGE CV VIDÉO">
     <meta property="og:description"
-        content="Portfolio de Yohan Guyot, UX/UI designer. Découvrez le montage de mon CV vidéo !">
+        content="Portfolio de Yohan Guyot, designer polyvalent. Découvrez le montage de mon CV vidéo !">
     <meta property="og:image" content="https://www.yohanguyot.fr/assets/img/cv-video/card.jpg">
 
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://yohanguyot.fr/montage-cv-video.html">
     <meta property="twitter:title" content="YOHAN GUYOT | MONTAGE CV VIDÉO">
     <meta property="twitter:description"
-        content="Portfolio de Yohan Guyot, UX/UI designer. Découvrez le montage de mon CV vidéo !">
+        content="Portfolio de Yohan Guyot, designer polyvalent. Découvrez le montage de mon CV vidéo !">
     <meta property="og:image" content="https://www.yohanguyot.fr/assets/img/cv-video/card.jpg">
 
     <title>YOHAN GUYOT | MONTAGE CV VIDÉO</title>
