--- a/portrait-chinois.html
+++ b/portrait-chinois.html
@@ -5,20 +5,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" lang="fr" content="Yohan Guyot">
-    <meta name="description" content="Portfolio de Yohan Guyot, UX/UI designer. Découvrez mon portrait chinois !">
+    <meta name="description" content="Portfolio de Yohan Guyot, designer polyvalent. Découvrez mon portrait chinois !">
 
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://yohanguyot.fr/portrait-chinois.html">
     <meta property="og:title" content="YOHAN GUYOT | PORTRAIT CHINOIS">
     <meta property="og:description"
-        content="Portfolio de Yohan Guyot, UX/UI designer. Découvrez mon portrait chinois !">
+        content="Portfolio de Yohan Guyot, designer polyvalent. Découvrez mon portrait chinois !">
     <meta property="og:image" content="https://www.yohanguyot.fr/assets/img/portrait-chinois/card.jpg">
 
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://yohanguyot.fr/portrait-chinois.html">
     <meta property="twitter:title" content="YOHAN GUYOT | PORTRAIT CHINOIS">
     <meta property="twitter:description"
-        content="Portfolio de Yohan Guyot, UX/UI designer. Découvrez mon portrait chinois !">
+        content="Portfolio de Yohan Guyot, designer polyvalent. Découvrez mon portrait chinois !">
     <meta property="og:image" content="https://www.yohanguyot.fr/assets/img/portrait-chinois/card.jpg">
 
     <title>YOHAN GUYOT | PORTRAIT CHINOIS</title>
