--- a/slyde.html
+++ b/slyde.html
@@ -5,21 +5,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" lang="fr" content="Yohan Guyot">
-    <meta name="description"
-        content="Portfolio de Yohan Guyot, UX/UI designer. Découvrez Slyde, la plateforme de collaboration musicale !">
+    <meta name="description" content="Portfolio de Yohan Guyot, designer polyvalent. Découvrez Slyde, la plateforme de collaboration musicale
+        !">
 
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://yohanguyot.fr/slyde.html">
     <meta property="og:title" content="YOHAN GUYOT | SLYDE">
-    <meta property="og:description"
-        content="Portfolio de Yohan Guyot, UX/UI designer. Découvrez Slyde, la plateforme de collaboration musicale !">
+    <meta property="og:description" content="Portfolio de Yohan Guyot, designer polyvalent. Découvrez Slyde, la plateforme de collaboration musicale
+        !">
     <meta property="og:image" content="https://www.yohanguyot.fr/assets/img/slyde/card.jpg">
 
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://yohanguyot.fr/slyde.html">
     <meta property="twitter:title" content="YOHAN GUYOT | SLYDE">
-    <meta property="twitter:description"
-        content="Portfolio de Yohan Guyot, UX/UI designer. Découvrez Slyde, la plateforme de collaboration musicale !">
+    <meta property="twitter:description" content="Portfolio de Yohan Guyot, designer polyvalent. Découvrez Slyde, la plateforme de collaboration musicale
+        !">
     <meta property="og:image" content="https://www.yohanguyot.fr/assets/img/slyde/card.jpg">
 
     <title>YOHAN GUYOT | SLYDE</title>
@@ -172,8 +172,20 @@
         </div>
 
         <div class="project-gallery">
-            <div class="coming-soon noise" data-aos="zoom-out" data-aos-duration="1500"
-                data-aos-anchor-placement="top-bottom" data-aos-once="true">À VENIR</div>
+            <img src="assets/img/slyde/accueil.jpg" alt="" draggable="false" class="slyde" data-aos="fade-up"
+                data-aos-duration="1500" data-aos-anchor-placement="top-bottom" data-aos-once="true">
+            <img src="assets/img/slyde/feed.jpg" alt="" draggable="false" class="slyde slyde-mid" data-aos="zoom-out"
+                data-aos-duration="1500" data-aos-anchor-placement="top-bottom" data-aos-once="true">
+            <img src="assets/img/slyde/profil.jpg" alt="" draggable="false" class="slyde" data-aos="zoom-out"
+                data-aos-duration="1500" data-aos-anchor-placement="top-bottom" data-aos-once="true">
+            <img src="assets/img/slyde/projet.jpg" alt="" draggable="false" class="slyde slyde-mid" data-aos="zoom-out"
+                data-aos-duration="1500" data-aos-anchor-placement="top-bottom" data-aos-once="true">
+            <img src="assets/img/slyde/tchat.jpg" alt="" draggable="false" class="slyde" data-aos="zoom-out"
+                data-aos-duration="1500" data-aos-anchor-placement="top-bottom" data-aos-once="true">
+            <img src="assets/img/slyde/ins-3.jpg" alt="" draggable="false" class="slyde slyde-mid" data-aos="zoom-out"
+                data-aos-duration="1500" data-aos-anchor-placement="top-bottom" data-aos-once="true">
+            <img src="assets/img/slyde/ins-4.jpg" alt="" draggable="false" class="slyde" data-aos="zoom-out"
+                data-aos-duration="1500" data-aos-anchor-placement="top-bottom" data-aos-once="true">
         </div>
 
         <div class="credits" data-aos="fade-right" data-aos-duration="1500" data-aos-anchor-placement="top-bottom"
