--- a/en/index.html
+++ b/en/index.html
@@ -63,7 +63,7 @@
                 <a href="https://www.behance.net/yohanguyot" target="_blank" id="behance">
                     <img src="../assets/img/behance.svg" alt="behance" draggable="false">
                 </a>
-                <a href="https://www.instagram.com/gruyohan/" target="_blank" id="instagram">
+                <a href="https://www.instagram.com/yohan_gyt/" target="_blank" id="instagram">
                     <img src="../assets/img/instagram.svg" alt="instagram" draggable="false">
                 </a>
                 <a href="https://www.linkedin.com/in/yohan-guyot/" target="_blank" id="linkedin">
