--- a/jpo-2021.html
+++ b/jpo-2021.html
@@ -155,7 +155,7 @@
                     groupe une campagne institutionnelle de notre formation pour les portes ouvertes et mon rôle a été
                     de réaliser l’affiche.
                     <br>
-                    Nous avions décider de reproduire l’affiche du film Parasite en remplaçant les personnages par des
+                    Nous avions décidé de reproduire l’affiche du film Parasite en remplaçant les personnages par des
                     étudiants représentant les domaines de la formation MMI. Leurs yeux étant cachés, les visiteurs de
                     la JPO on pu s’y identifier plus facilement.
                     <br>
