--- a/redesign-netflix.html
+++ b/redesign-netflix.html
@@ -186,8 +186,9 @@
                     data-aos="fade-left" data-aos-duration="1500" data-aos-anchor-placement="top-bottom"
                     data-aos-once="true">
             </div>
-            <img src="assets/img/redesign-netlix/player.png" alt="" class="netflix-player" data-aos="zoom-out"
-                data-aos-duration="1500" data-aos-anchor-placement="top-bottom" data-aos-once="true">
+            <img src="assets/img/redesign-netlix/player.png" alt="" draggable="false" class="netflix-player"
+                data-aos="zoom-out" data-aos-duration="1500" data-aos-anchor-placement="top-bottom"
+                data-aos-once="true">
         </div>
 
         <div class="credits" data-aos="fade-right" data-aos-duration="1500" data-aos-anchor-placement="top-bottom"
