--- a/a-propos.html
+++ b/a-propos.html
@@ -70,7 +70,7 @@
                     <img src="assets/img/instagram.svg" alt="instagram" draggable="false">
                 </a>
                 <a href="https://www.linkedin.com/in/yohan-guyot/" target="_blank" id="linkedin">
-                    <img src="assets/img/linkedin.svg" alt="behance" draggable="false">
+                    <img src="assets/img/linkedin.svg" alt="linkedin" draggable="false">
                 </a>
             </div>
         </div>
@@ -87,7 +87,7 @@
                 <div class="wrapper-para">
                     <p data-aos="zoom-out" data-aos-duration="1500" data-aos-anchor-placement="top-bottom"
                         data-aos-once="true" data-aos-delay="200">
-                        Bonjour ! Je m’appelle Yohan Guyot et j’ai 20 ans. Je suis actuellement étudiant en deuxième
+                        Bonjour ! Je m’appelle Yohan Guyot et j’ai 21 ans. Je suis actuellement étudiant en deuxième
                         année
                         de
                         DUT
