--- a/en/about.html
+++ b/en/about.html
@@ -70,7 +70,7 @@
                     <img src="../assets/img/instagram.svg" alt="instagram" draggable="false">
                 </a>
                 <a href="https://www.linkedin.com/in/yohan-guyot/" target="_blank" id="linkedin">
-                    <img src="../assets/img/linkedin.svg" alt="behance" draggable="false">
+                    <img src="../assets/img/linkedin.svg" alt="linkedin" draggable="false">
                 </a>
             </div>
         </div>
@@ -87,7 +87,7 @@
                 <div class="wrapper-para">
                     <p data-aos="zoom-out" data-aos-duration="1500" data-aos-anchor-placement="top-bottom"
                         data-aos-once="true" data-aos-delay="200">
-                        Hello ! My name is Yohan Guyot and I am 20 years old. I’m currently a second year student of the
+                        Hello ! My name is Yohan Guyot and I am 21 years old. I’m currently a second year student of the
                         DUT MMI (Multimedia and Internet Jobs) where I’m learning how to realize multimedia projects in
                         all of their aspects, whether it’s design, development or audiovisual.
                         <br><br>
