--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                     <img src="assets/img/instagram.svg" alt="instagram" draggable="false">
                 </a>
                 <a href="https://www.linkedin.com/in/yohan-guyot/" target="_blank" id="linkedin">
-                    <img src="assets/img/linkedin.svg" alt="behance" draggable="false">
+                    <img src="assets/img/linkedin.svg" alt="linkedin" draggable="false">
                 </a>
             </div>
         </div>
